cluster-policy-example.yml
apiVersion : kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registries-two
spec:
  validationFailureAction: enforce
  rules:
  - name: validate-registries-two
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaces:
          - privileged-pss-with-kyverno
    validate:
      message: "Images may only come from our internal enterprise registry."
      pattern:
        spec:
          containers:
          - image: "registry.domain.com/*"
